--- a/VehicleInspectionInsuranceWeb/package.json
+++ b/VehicleInspectionInsuranceWeb/package.json
@@ -20,7 +20,15 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.29.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.2.2",
+    "chart.js": "^4.0.1",
+    "react-chartjs-2": "^5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
