--- a/VehicleInspectionInsuranceWeb/package.json
+++ b/VehicleInspectionInsuranceWeb/package.json
@@ -13,22 +13,22 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "aos": "^2.3.4",
-    "formik": "^2.4.6",
-    "framer-motion": "^12.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.29.0",
-    "yup": "^1.6.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "axios": "^1.2.2",
+    "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "chart.js": "^4.0.1",
+    "formik": "^2.4.6",
+    "framer-motion": "^12.4.1",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.29.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
