--- a/VehicleInspectionInsuranceWeb/package.json
+++ b/VehicleInspectionInsuranceWeb/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.0.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.1",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
